# TND004

./: .gitignore
Labs/Lab3-part1/collisionsystem/include/particlesystem/: priorityqueue.h
Labs/Lab3-part2/detectionSystem/data/output/: segments-detailedpoints1423.txt  segments-detailedpoints20.txt  segments-detailedpoints200.txt  segments-detailedpoints40.txt  segments-detailedpoints5.txt  segments-detailedpoints8.txt  segments-points1423.txt  segments-points5.txt
Labs/Lab3-part2/detectionSystem/data/output/details/: segments-points5.txt
Labs/Lab3-part2/detectionSystem/linesdiscoverysystem/include/: find-patterns.hpp
Labs/Lab3-part2/detectionSystem/linesdiscoverysystem/src/: find-patterns.cpp  message.cpp  previous findcollinear.cpp
Labs/Lab3-part2/detectionSystem/renderingSystem/src/: lab3-part2.cpp
Labs/lab1/code/: CMakeLists.txt  lab1.cpp
Labs/lab2/code/: CMakeLists.txt  set.cpp  set.h
Labs/lab4/code/code4a/: digraph.cpp  digraph.h  main.cpp
Labs/lab4/code/code4b/: dsets.cpp  graph.cpp
Lectures/Code1/code/: CMakeLists.txt  factorial.cpp  fibonacci.cpp  findFrequency.cpp
Lectures/Code3/code/: CMakeLists.txt  power.cpp
Lectures/Code4/code/: CMakeLists.txt  queue.cpp  stack - Copy.cpp  stack.cpp
